{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 226,
  "lineage": "34b7e428-2805-3856-4dd8-01ee31347dd4",
  "resources": [
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f495eb9d4054bd3",
            "arn": "arn:aws:ec2:us-east-1:201595968898:instance/i-0108a322a7bc53cfb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0108a322a7bc53cfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c7e71bc7c262f994",
            "private_dns": "ip-10-20-0-38.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.0.38",
            "public_ip": "54.172.33.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0c86996d8c94ea1b2",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a1313bf74f8be32",
            "tags": {
              "Name": "nat-instance"
            },
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777",
              "Name": "nat-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a5a747e4e65686f"
            ]
          },
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:internet-gateway/igw-0cb05c136eb1aa067",
            "id": "igw-0cb05c136eb1aa067",
            "owner_id": "201595968898",
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777"
            },
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:route-table/rtb-095ad36efa1513f3c",
            "id": "rtb-095ad36efa1513f3c",
            "owner_id": "201595968898",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:route-table/rtb-0a41c6e0b3134f771",
            "id": "rtb-0a41c6e0b3134f771",
            "owner_id": "201595968898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb05c136eb1aa067",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_internet_gateway.main",
            "module.jhc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff5d9d3850f8eb6e",
            "route_table_id": "rtb-095ad36efa1513f3c",
            "subnet_id": "subnet-0bf4cb13cc5f77b2a"
          },
          "dependencies": [
            "module.jhc_vpc.aws_route_table.private",
            "module.jhc_vpc.aws_subnet.private",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d220fb9d6ef71457",
            "route_table_id": "rtb-095ad36efa1513f3c",
            "subnet_id": "subnet-07e7e2405d1339a40"
          },
          "dependencies": [
            "module.jhc_vpc.aws_route_table.private",
            "module.jhc_vpc.aws_subnet.private",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04857cb89f55d1156",
            "route_table_id": "rtb-095ad36efa1513f3c",
            "subnet_id": "subnet-0c4a1d7aa0abdd9cc"
          },
          "dependencies": [
            "module.jhc_vpc.aws_route_table.private",
            "module.jhc_vpc.aws_subnet.private",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cca596a68dabfc08",
            "route_table_id": "rtb-0a41c6e0b3134f771",
            "subnet_id": "subnet-05a1313bf74f8be32"
          },
          "dependencies": [
            "module.jhc_vpc.aws_internet_gateway.main",
            "module.jhc_vpc.aws_route_table.public",
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd4e807a11d74732",
            "route_table_id": "rtb-0a41c6e0b3134f771",
            "subnet_id": "subnet-0498c4613874e38f8"
          },
          "dependencies": [
            "module.jhc_vpc.aws_internet_gateway.main",
            "module.jhc_vpc.aws_route_table.public",
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3138178dd3b8414",
            "route_table_id": "rtb-0a41c6e0b3134f771",
            "subnet_id": "subnet-0a989e92e46610d2c"
          },
          "dependencies": [
            "module.jhc_vpc.aws_internet_gateway.main",
            "module.jhc_vpc.aws_route_table.public",
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:subnet/subnet-0bf4cb13cc5f77b2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf4cb13cc5f77b2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201595968898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777"
            },
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:subnet/subnet-07e7e2405d1339a40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e7e2405d1339a40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201595968898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777"
            },
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:subnet/subnet-0c4a1d7aa0abdd9cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4a1d7aa0abdd9cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201595968898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777"
            },
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:subnet/subnet-05a1313bf74f8be32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a1313bf74f8be32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "201595968898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777"
            },
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:subnet/subnet-0498c4613874e38f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0498c4613874e38f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "201595968898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777"
            },
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:subnet/subnet-0a989e92e46610d2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a989e92e46610d2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "201595968898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777"
            },
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.jhc_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:vpc/vpc-03ce7f4cbe00274dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0a860304b119da27a",
            "default_route_table_id": "rtb-081c1d24c1d80a73c",
            "default_security_group_id": "sg-08a5a747e4e65686f",
            "dhcp_options_id": "dopt-0c0c8b076475864a4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ce7f4cbe00274dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081c1d24c1d80a73c",
            "owner_id": "201595968898",
            "tags": {
              "Name": "jhc-app"
            },
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777",
              "Name": "jhc-app"
            }
          }
        }
      ]
    },
    {
      "module": "module.manu_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:security-group/sg-0c2b56568cda217f8",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2b56568cda217f8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "some description",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f3feac94642b540e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow traffic for RDS",
            "name_prefix": "",
            "owner_id": "201595968898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_security_rules"
            },
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777",
              "Name": "rds_security_rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main",
            "module.webapp.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.myappalb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:201595968898:loadbalancer/app/my-alb/23a035708db3fe5b",
            "arn_suffix": "app/my-alb/23a035708db3fe5b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-430307154.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:201595968898:loadbalancer/app/my-alb/23a035708db3fe5b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-011cc37cc7d25d433"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0498c4613874e38f8"
              },
              {
                "subnet_id": "subnet-05a1313bf74f8be32"
              },
              {
                "subnet_id": "subnet-0a989e92e46610d2c"
              }
            ],
            "subnets": [
              "subnet-0498c4613874e38f8",
              "subnet-05a1313bf74f8be32",
              "subnet-0a989e92e46610d2c"
            ],
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777"
            },
            "vpc_id": "vpc-03ce7f4cbe00274dd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs",
            "module.myappalb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.myappalb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:201595968898:listener/app/my-alb/23a035708db3fe5b/c64095e90128de8b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:201595968898:targetgroup/myapp-tg/15187849583fd4a2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:201595968898:listener/app/my-alb/23a035708db3fe5b/c64095e90128de8b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:201595968898:loadbalancer/app/my-alb/23a035708db3fe5b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs",
            "module.myappalb.aws_lb.my-alb",
            "module.myappalb.aws_lb_target_group.main",
            "module.myappalb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.myappalb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:201595968898:targetgroup/myapp-tg/15187849583fd4a2",
            "arn_suffix": "targetgroup/myapp-tg/15187849583fd4a2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:201595968898:targetgroup/myapp-tg/15187849583fd4a2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "myapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.myappalb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:201595968898:targetgroup/myapp-tg/15187849583fd4a2-20230908111238575000000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:201595968898:targetgroup/myapp-tg/15187849583fd4a2",
            "target_id": "i-038b66691d155d5e5"
          },
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs",
            "module.myappalb.aws_lb_target_group.main",
            "module.webapp.aws_instance.main",
            "module.webapp.aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:201595968898:targetgroup/myapp-tg/15187849583fd4a2-20230908111238970800000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:201595968898:targetgroup/myapp-tg/15187849583fd4a2",
            "target_id": "i-01133cdf67e7dee32"
          },
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs",
            "module.myappalb.aws_lb_target_group.main",
            "module.webapp.aws_instance.main",
            "module.webapp.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.myappalb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:security-group/sg-011cc37cc7d25d433",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011cc37cc7d25d433",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "some description",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "201595968898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_security_rules"
            },
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777",
              "Name": "web_security_rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.webapp",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:201595968898:instance/i-038b66691d155d5e5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038b66691d155d5e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mamidi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0574fbba53c7de093",
            "private_dns": "ip-10-20-0-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.0.100",
            "public_ip": "3.86.142.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06e57f54b8d31a47d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a1313bf74f8be32",
            "tags": {
              "Name": "terraform-training"
            },
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777",
              "Name": "terraform-training"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0f3feac94642b540e"
            ]
          },
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs",
            "module.webapp.aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:201595968898:instance/i-01133cdf67e7dee32",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01133cdf67e7dee32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mamidi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f99c3bcd318082ed",
            "private_dns": "ip-10-20-1-99.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.99",
            "public_ip": "54.210.176.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0806465c804e506ea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0498c4613874e38f8",
            "tags": {
              "Name": "terraform-training"
            },
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777",
              "Name": "terraform-training"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0f3feac94642b540e"
            ]
          },
          "dependencies": [
            "module.jhc_vpc.aws_subnet.public",
            "module.jhc_vpc.aws_vpc.main",
            "module.jhc_vpc.data.aws_availability_zones.azs",
            "module.webapp.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.webapp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201595968898:security-group/sg-0f3feac94642b540e",
            "description": "allow traffic for web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3feac94642b540e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "describe",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "describe",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-sg",
            "name_prefix": "",
            "owner_id": "201595968898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_security_rules"
            },
            "tags_all": {
              "AppName": " HR Automation",
              "CostCenter": "JHC777",
              "Name": "web_security_rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce7f4cbe00274dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jhc_vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}